# demo-package

./: README.md  pyproject.toml
src/demo_package/: __init__.py
