[project]
name = "demo-package"
version = "0.0.1a0"
authors = [
  { name="Matthew Badger", email="matt@branchenergy.com" },
]
description = "A Demo Python Package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
